feat: update artists schema with links and images
